# serenity-bot-skeleton

./: Cargo.toml  README.md  cargo.toml
.github/: dependabot.yml
src/: main.rs
src/bot_core/: constants.rs  context.rs  db.rs  mod.rs
src/commands/: command_handler.rs  hello.rs  mod.rs  ping.rs  uptime.rs
