[package]
name = "bot"
version = "0.3.1"
edition = "2021"

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "default_native_tls", "model", "simd_json"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "sqlite"] }
libc_alloc = "1.0.4"
chrono = "0.4.24"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
